--- a/Dialogs/AddCoinDialog.xaml
+++ b/Dialogs/AddCoinDialog.xaml
@@ -19,6 +19,8 @@
                                 ItemsSource="{Binding CoinCollection, ElementName=Root, Mode=TwoWay}" 
                                 MyText="{Binding CoinName, ElementName=Root, Mode=TwoWay}" 
                                 SuggestionChosen="AutoSuggestBox_SuggestionChosen"
+                                MyPlaceholderText="search using name, symbol, id"
+                                ToolTipService.ToolTip="Search a coin using 'Name, Symbol, Id'"
                                 KeyDown="AutoSuggestBox_KeyDown"
                                 AnimateBorder="True"
                                 Width="300"
