--- a/Views/AccountsView.xaml
+++ b/Views/AccountsView.xaml
@@ -9,7 +9,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:controls="using:CryptoPortfolioTracker.Controls"
- 
+    Loading="View_Loading"
      mc:Ignorable="d">
     <Page.Resources>
         <converters:ColourConverter x:Key="myColourConverter"/>
@@ -26,7 +26,7 @@
             <Setter Property="BorderThickness" Value="0"/>
         </Style>
     </Page.Resources>
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" >
         <Grid x:Name="HeaderGrid" CornerRadius="8,8,0,0" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Margin="0,0,5,10" VerticalAlignment="Stretch" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="100"/>
