--- a/Controls/AssetTransactionsListViewControl.xaml
+++ b/Controls/AssetTransactionsListViewControl.xaml
@@ -21,6 +21,7 @@
 
         <converters:DoubleToVisibilityConverter x:Key="DoubleToVisibilityConverter"/>
         <converters:StringFormatConverter x:Key="StringFormatConverter"/>
+        <converters:ImageUriToBitmapImageConverter x:Key="ImageConverter"/>
         <converters:TransactionDirectionToImageConverter x:Key="TransactionDirectionConverter"/>
         <converters:TransactionTypeToStringConverter x:Key="TransactionTypeConverter"/>
         <converters:TransactionTypeToVisibilityConverter x:Key="TransactionTypeToVisibilityConverter"/>
@@ -92,11 +93,11 @@
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="38"/>
                                             <ColumnDefinition Width="0.12*"/>
-                                            <ColumnDefinition Width="0.2*"/>
-                                            <ColumnDefinition Width="0.23*"/>
-                                            <ColumnDefinition Width="0.04*"/>
-                                            <ColumnDefinition Width="0.2*"/>
-                                            <ColumnDefinition Width="0.23*"/>
+                                            <ColumnDefinition Width="0.24*"/>
+                                            <ColumnDefinition Width="0.20*"/>
+                                            <ColumnDefinition Width="0.02*"/>
+                                            <ColumnDefinition Width="0.24*"/>
+                                            <ColumnDefinition Width="0.20*"/>
                                             <ColumnDefinition Width="50"/>
                                         </Grid.ColumnDefinitions>
 
@@ -114,37 +115,57 @@
                                             </StackPanel>
                                         </Border>
 
-                                        <Border Grid.Row="0" Grid.Column="2"  Margin="10,0,0,0"  VerticalAlignment="Center" >
+                                        <Border Grid.Row="0" Grid.Column="2"  Margin="0,0,0,0"  VerticalAlignment="Center" >
                                             <StackPanel Orientation="Horizontal"  HorizontalAlignment="Right">
-                                                <TextBlock Name="txtQtyA"  Text="{Binding Details.QtyA, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:G7}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}"/>
+                                                <TextBlock Name="txtQtyA"  
+                                                    Text="{Binding Details.QtyA, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}{0:0.########}'}" 
+                                                    FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}"/>
                                                 <TextBlock Name="txtCoinA"  Text="{Binding Details.CoinA}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" Margin="5,0,0,0"/>
                                                 <Image Name="ImageA" Source="{Binding Details.ImageUriA, Converter={StaticResource ImageConverter}}" Height="24"  Margin="5,0,0,0" />
                                             </StackPanel>
                                         </Border>
 
                                         <Border Grid.Row="0" Grid.Column="3"  Margin="5,0,0,0"  VerticalAlignment="Center" HorizontalAlignment="Stretch" >
-                                                <RelativePanel x:Name="PanelFrom" HorizontalAlignment="Right">
-                                                <TextBlock Name="txtValueA"  Text="{Binding Details.ValueA, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" Margin="0,-2,0,0"
-                                                               RelativePanel.LeftOf="txtPricePrefixA" />
-                                                <TextBlock Name="txtPricePrefixA"  Text="{Binding Details.CoinA, Converter={StaticResource AddPrefixConverter}, ConverterParameter='(1 | = '}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" Margin="5,0,0,0" 
-                                                               RelativePanel.LeftOf="txtPriceA"/>
-                                                <TextBlock Name="txtPriceA"  Text="{Binding Details.PriceA, Converter={StaticResource AddSuffixConverter}, ConverterParameter=')|G7'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"  Margin="2,0,0,0" 
-                                                               RelativePanel.AlignRightWithPanel="True"/>
+                                            <RelativePanel x:Name="PanelFrom" HorizontalAlignment="Right">
+                                                <TextBlock Name="txtValueA"  
+                                                    Text="{Binding Details.ValueA, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}$ {0:N0}'}" 
+                                                    FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" Margin="0,-2,0,0"
+                                                     RelativePanel.AlignRightWithPanel="True"/>
+                                                <TextBlock Name="txtPricePrefixA"  Text="{Binding Details.CoinA, Converter={StaticResource AddPrefixConverter}, ConverterParameter='(1 | = $ '}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" Margin="5,0,0,0" 
+                                                               RelativePanel.Below="txtValueA" RelativePanel.LeftOf="txtPriceA"/>
+                                                <TextBlock Name="txtPriceA"  
+                                                    Text="{Binding Details.PriceA, 
+                                                        Converter={StaticResource AddSuffixConverter}, 
+                                                        ConverterParameter=')|0.########'}" 
+                                                    FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"  Margin="2,0,0,0" 
+                                                    RelativePanel.Below="txtValueA" RelativePanel.AlignRightWithPanel="True"/>
                                                 <TextBlock Name="txtAccountFrom"  Text="{Binding Details.AccountFrom}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"  Margin="2,0,0,0" 
                                                                RelativePanel.Below="txtPriceA" 
                                                                RelativePanel.AlignRightWithPanel="True"/>
                                                 <StackPanel Orientation="Horizontal" Visibility="{Binding Details.FeeQty, Converter={StaticResource DoubleToVisibilityConverter }}" HorizontalAlignment="Right"
                                                                 RelativePanel.Below="txtAccountFrom"
                                                                 RelativePanel.AlignRightWithPanel="True" >
-                                                    <TextBlock Name="txtQtyFee"  Text="{Binding Details.FeeQty, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Fee: {0:G7}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" />
+                                                    <TextBlock Name="txtQtyFee"  
+                                                        Text="{Binding Details.FeeQty, 
+                                                            Converter={StaticResource StringFormatConverter}, 
+                                                            ConverterParameter='{}Fee: {0:0.########}'}" 
+                                                        FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" />
                                                     <TextBlock Name="txtCoinFee"  Text="{Binding Details.FeeCoin}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" Margin="5,0,0,0" />
-                                                    </StackPanel>
-                                                </RelativePanel>
-                                            </Border>
+                                                </StackPanel>
+                                            </RelativePanel>
+                                        </Border>
 
                                         <Border Grid.Row="0" Grid.Column="5"  Margin="10,0,0,0"  VerticalAlignment="Center">
                                             <StackPanel Orientation="Horizontal" Visibility="{Binding Details.TransactionType, Converter={StaticResource TransactionTypeToVisibilityConverter}}" HorizontalAlignment="Right">
-                                                <TextBlock Name="txtQtyB"  Text="{Binding Details.QtyB, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:G7}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" />
+                                                <TextBlock Name="txtQtyB"  
+                                                    Text="{Binding Details.QtyB, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}{0:0.########}'}" 
+                                                    FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" />
                                                 <TextBlock Name="txtCoinB"  Text="{Binding Details.CoinB}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" Margin="5,0,0,0" />
                                                 <Image Name="ImageB" Source="{Binding Details.ImageUriB, Converter={StaticResource ImageConverter}}" Height="24"  Margin="5,0,0,0"/>
                                             </StackPanel>
@@ -153,12 +174,20 @@
                                         <Border Grid.Row="0" Grid.Column="6"  Margin="5,0,0,0"  VerticalAlignment="Center" HorizontalAlignment="Stretch" >
                                             <StackPanel>
                                                 <RelativePanel x:Name="PanelTo" Visibility="{Binding Details.TransactionType, Converter={StaticResource TransactionTypeToVisibilityConverter}}" HorizontalAlignment="Right" >
-                                                    <TextBlock Name="txtValueB"  Text="{Binding Details.ValueB, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" Margin="0,-2,0,0"
-                                                                RelativePanel.LeftOf="txtPricePrefixB" />
+                                                    <TextBlock Name="txtValueB"  
+                                                        Text="{Binding Details.ValueB, 
+                                                            Converter={StaticResource StringFormatConverter}, 
+                                                            ConverterParameter='{}$ {0:N0}'}" 
+                                                        FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" Margin="0,-2,0,0"
+                                                        RelativePanel.AlignRightWithPanel="True"/>
                                                     <TextBlock Name="txtPricePrefixB"  Text="{Binding Details.CoinB, Converter={StaticResource AddPrefixConverter}, ConverterParameter='(1 | = '}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" Margin="5,0,0,0" 
-                                                                RelativePanel.LeftOf="txtPriceB" />
-                                                    <TextBlock Name="txtPriceB"  Text="{Binding Details.PriceB, Converter={StaticResource AddSuffixConverter}, ConverterParameter=')|G7'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"  Margin="2,0,0,0" 
-                                                                RelativePanel.AlignRightWithPanel="True"/>
+                                                                RelativePanel.Below="txtValueB" RelativePanel.LeftOf="txtPriceB" />
+                                                    <TextBlock Name="txtPriceB"  
+                                                        Text="{Binding Details.PriceB, 
+                                                            Converter={StaticResource AddSuffixConverter}, 
+                                                            ConverterParameter=')|0.########'}" 
+                                                        FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"  Margin="2,0,0,0" 
+                                                        RelativePanel.Below="txtValueB" RelativePanel.AlignRightWithPanel="True"/>
                                                 </RelativePanel>
                                                 <TextBlock Name="txtAccountTo"  Text="{Binding Details.AccountTo}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"  Margin="2,0,0,0" HorizontalAlignment="Right" />
                                             </StackPanel>
