--- a/Controls/AssetsListViewControl.xaml
+++ b/Controls/AssetsListViewControl.xaml
@@ -112,7 +112,7 @@
 
         <ListView x:Name="AssetsListView" Grid.Row="2" Grid.ColumnSpan="8" x:FieldModifier="public" ItemsSource="{Binding ListAssetTotals, Mode=TwoWay}" BorderBrush="Transparent" BorderThickness="1"                             
                         IsItemClickEnabled="True" SelectionMode="Single" toolkit:ScrollBarExtensions.KeepVerticalExpanded="{Binding IsScrollBarsExpanded}"
-                  ui:ListViewExtensions.Command="{Binding AssetItemClickedCommand}" SizeChanged="AssetsListView_SizeChanged"
+                  ui:ListViewExtensions.Command="{Binding AssetItemClickedCommand}" SizeChanged="AssetsListView_SizeChanged" ItemClick="View_ItemClick"
                         ItemContainerStyle="{StaticResource HorizontalSwipe}" ScrollViewer.VerticalScrollBarVisibility="Visible"
                         CanReorderItems="false" AllowDrop="false" Margin="10,0,0,10" >
 
@@ -155,35 +155,70 @@
 
                                     <Border Grid.Column="2"  Margin="5,0,0,0"  VerticalAlignment="Center" HorizontalAlignment="Stretch">
                                         <RelativePanel HorizontalAlignment="Right">
-                                                <TextBlock Name="txtQty"  Text="{Binding Qty, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:G7}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" />
+                                                <TextBlock Name="txtQty"  Text="{Binding Qty, 
+                                                    Converter={StaticResource StringFormatConverter}, 
+                                                    ConverterParameter='{}{0:0.########}'}" 
+                                                    FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" />
                                                 <TextBlock Name="txtSymbol" Text="{Binding Coin.Symbol}" RelativePanel.RightOf="txtQty" FontSize="{Binding DataContext.DataContext.FontLevel1, ElementName=proxy}" Margin="5,0,0,0"/>
                                         </RelativePanel>
                                     </Border>
                                     <Border Grid.Column="3"  Margin="5,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Stretch" >
                                         <RelativePanel HorizontalAlignment="Right">
-                                                <TextBlock Name="txtChange24Hr" Text="{Binding Coin.Change24Hr, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:N2} %'}" RelativePanel.AlignRightWithPanel="True" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}"
-                                                        Foreground="{Binding Coin.Change24Hr, Converter={StaticResource myColourConverter}}"/>
-                                                <TextBlock Name="txtChange30D" Text="{Binding Coin.Change1Month, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:N2} %'}" RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtChange24Hr" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"
-                                                        Foreground="{Binding Coin.Change1Month, Converter={StaticResource myColourConverter}}"/>
+                                                <TextBlock Name="txtChange24Hr" 
+                                                    Text="{Binding Coin.Change24Hr, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}{0:0.00} %'}" 
+                                                    RelativePanel.AlignRightWithPanel="True" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}"
+                                                    Foreground="{Binding Coin.Change24Hr, Converter={StaticResource myColourConverter}}"/>
+                                                <TextBlock Name="txtChange30D" 
+                                                    Text="{Binding Coin.Change1Month, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}{0:0.00} %'}" 
+                                                    RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtChange24Hr" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}"
+                                                    Foreground="{Binding Coin.Change1Month, Converter={StaticResource myColourConverter}}"/>
                                             </RelativePanel>
                                     </Border>
                                     <Border Grid.Column="4"  Margin="5,0,0,0"  VerticalAlignment="Center" HorizontalAlignment="Stretch" >
                                         <RelativePanel HorizontalAlignment="Right">
-                                                <TextBlock Name="txtMarketValue" Text="{Binding MarketValue, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
-                                                <TextBlock Name="txtPrice" Text="{Binding Coin.Price, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:G7}'}" RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtMarketValue" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" TextAlignment="Right"/>
+                                                <TextBlock Name="txtMarketValue" 
+                                                    Text="{Binding MarketValue, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}$ {0:N0}'}" 
+                                                    FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
+                                                <TextBlock Name="txtPrice" 
+                                                    Text="{Binding Coin.Price, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}$ {0:0.########}'}" 
+                                                    RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtMarketValue" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" TextAlignment="Right"/>
                                         </RelativePanel>
                                     </Border>
                                     <Border Grid.Column="5"  Margin="5,0,0,0"  VerticalAlignment="Center" HorizontalAlignment="Stretch" >
                                         <RelativePanel HorizontalAlignment="Right" >
-                                                <TextBlock Name="txtCostBase"  Text="{Binding CostBase, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}" FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
-                                                <TextBlock Name="txtAverageCostPrice" Text="{Binding AverageCostPrice, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:G7}'}" RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtCostBase" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" TextAlignment="Right"/>
+                                                <TextBlock Name="txtCostBase"  
+                                                    Text="{Binding CostBase, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}$ {0:N0}'}" 
+                                                    FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}" RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
+                                                <TextBlock Name="txtAverageCostPrice" 
+                                                    Text="{Binding AverageCostPrice, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}$ {0:0.########}'}" 
+                                                    RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtCostBase" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" TextAlignment="Right"/>
                                         </RelativePanel>
                                     </Border>
                                         <Border Grid.Column="6"  Margin="5,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Stretch"  >
                                         <RelativePanel HorizontalAlignment="Right">
-                                                <TextBlock Name="txtProfitLoss" Text="{Binding ProfitLoss, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}$ {0:N0}'}"  FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}"  RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
-                                                <TextBlock Name="txtProfitLossPerc" Text="{Binding ProfitLossPerc, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:N2} %'}" RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtProfitLoss" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" TextAlignment="Right"
-                                                        Foreground="{Binding ProfitLossPerc, Converter={StaticResource myColourConverter}}"/>
+                                                <TextBlock Name="txtProfitLoss" 
+                                                    Text="{Binding ProfitLoss, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}$ {0:N0}'}"  
+                                                    FontWeight="Normal" FontSize="{Binding DataContext.DataContext.FontLevel2, ElementName=proxy}"  RelativePanel.AlignRightWithPanel="True" TextAlignment="Right"/>
+                                                <TextBlock Name="txtProfitLossPerc" 
+                                                    Text="{Binding ProfitLossPerc, 
+                                                        Converter={StaticResource StringFormatConverter}, 
+                                                        ConverterParameter='{}{0:0.00} %'}" 
+                                                    RelativePanel.AlignRightWithPanel="True" RelativePanel.Below="txtProfitLoss" FontSize="{Binding DataContext.DataContext.FontLevel3, ElementName=proxy}" TextAlignment="Right"
+                                                    Foreground="{Binding ProfitLossPerc, Converter={StaticResource myColourConverter}}"/>
                                         </RelativePanel>
                                     </Border>
 
